opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Contiguous arrays in OCaml"
homepage: "https://gitlab.com/dannywillems/ocaml-carray"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-carray.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-carray/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.12"}
  # FIXME: See tests/dune. Should be 3.0.0.
  "dune" {>= "2.8.4"}
  "bls12-381" {>= "3.0.0" & < "4.0.0" & with-test}
  "alcotest" {with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
